# rust_consistent_hash

./: Cargo.toml  README.md  build.rs  grpc_call.sh
src/: lib.rs  main.rs
src/consistent/: mod.rs
src/proto/: consistent_hash.proto
